impl db.count, removed bug where continue after advance walks cursor past end, query component tracks storeMax and renders max values for page and count inputs, stopped tab buttons and toolbar from shrinking when table flex grows, min-width for table headers for readability

--- a/src/style.css
+++ b/src/style.css
@@ -39,11 +39,13 @@ body {
 	background-color: #dbdbdb;
 	overflow-y: hidden;
 	overflow-x: auto;
+	flex-shrink: 0;
 }
 .toolbar {
 	background-color: #858585;
 	overflow-x: auto;
 	text-align: left;
+	flex-shrink: 0;
 }
 .icon {
 	width: 2em;
@@ -107,6 +109,7 @@ table > tr > th {
 	background-color: #cecece;
 	padding-left: 0.5em;
 	padding-right: 0.5em;
+	min-width: 8em;
 }
 table > tr {
 	/* border: 1px solid #b5b5b5; */
